# metrics-anomaly-detection

./: .gitignore  .gitmodules  README.md
src/detector/: README.md  detector.yaml  main.py  pyproject.toml
src/load_generator/: README.md  config.yaml  main.py  pyproject.toml
src/ml/: lstm-ae-32-model-bs256.h5  lstm-ae-64-model-bs256.h5  preapre_datasets.ipynb  test.ipynb  train.ipynb
src/ml/NAB/: .gitignore  requirements.txt  run.py  run_nab_in_jupyter.ipynb
src/ml/NAB/config/: thresholds.json
src/ml/NAB/nab/detectors/my/: my_detector.py
src/ml/NAB/results/: final_results.json
src/ml/NAB/results/my/: my_reward_low_FN_rate_scores.csv  my_reward_low_FP_rate_scores.csv  my_standard_scores.csv
src/ml/NAB/results/my/artificialNoAnomaly/: my_art_daily_no_noise.csv  my_art_daily_perfect_square_wave.csv  my_art_daily_small_noise.csv  my_art_flatline.csv  my_art_noisy.csv
src/ml/NAB/results/my/artificialWithAnomaly/: my_art_daily_flatmiddle.csv  my_art_daily_jumpsdown.csv  my_art_daily_jumpsup.csv  my_art_daily_nojump.csv  my_art_increase_spike_density.csv  my_art_load_balancer_spikes.csv
src/ml/NAB/results/my/realAWSCloudwatch/: my_ec2_cpu_utilization_24ae8d.csv  my_ec2_cpu_utilization_53ea38.csv  my_ec2_cpu_utilization_5f5533.csv  my_ec2_cpu_utilization_77c1ca.csv  my_ec2_cpu_utilization_825cc2.csv  my_ec2_cpu_utilization_ac20cd.csv  my_ec2_cpu_utilization_c6585a.csv  my_ec2_cpu_utilization_fe7f93.csv  my_ec2_disk_write_bytes_1ef3de.csv  my_ec2_disk_write_bytes_c0d644.csv  my_ec2_network_in_257a54.csv  my_ec2_network_in_5abac7.csv  (+5 more)
src/other/: plots.py
(+30 files in other folders)
