[project]
name = "detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "aiohttp>=3.11.18",
    "click>=8.2.0",
    "keras==2.12",
    "prometheus-client>=0.21.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "tensorflow==2.12",
]
